# game_arena

./: .coverage  .env.example  .gitignore  .pylintrc  CHANGELOG.md  Dockerfile  INTEGRATION_TEST_RESULTS_FINAL.md  README.md  README_FreeCiv_LLM.md  TESTING_FREECIV.md  docker-compose.e2e.yml  docker-compose.yml  plan.md  pyproject.toml  requirements-dev.txt  run_freeciv_game.py  run_match_with_spectator.py  test_action_format.py  test_integration_simple.py  test_llm_integration.py
.cursor/rules/: pr-comments.mdc
config/: freeciv_agent_complete.yaml  freeciv_config.py
config/prompts/: game_templates.yaml  model_configs.yaml
docker/freeciv3d/: mock-proxy.py  supervisord.conf
docker/freeciv3d-mock/: Dockerfile  README.md  mock-proxy.py  mock-server.js  package.json  start.sh
docker/test/: Dockerfile
docs/: freeciv_deployment_guide.md
freeciv/: README.md  run_freeciv_game.py  test_freeciv3d_connection.py
game_arena/: __init__.py
game_arena/harness/: __init__.py  agent.py  agent_test.py  freeciv_action_converter.py  freeciv_action_converter_test.py  freeciv_cache.py  freeciv_client.py  freeciv_harness_demo.py  freeciv_llm_agent.py  freeciv_llm_agent_test.py  freeciv_memory.py  freeciv_parser_config.py  freeciv_parsers.py  freeciv_prompt_adapter.py  freeciv_protocol_models.py  freeciv_proxy_client.py  freeciv_proxy_client.py.backup  freeciv_state.py  freeciv_state_stubs.py  freeciv_state_sync.py  freeciv_state_test.py  freeciv_strategy.py  freeciv_telemetry.py  freeciv_timeout.py  game_notation_examples.py  harness_demo.py  llm_parsers.py  llm_parsers_test.py  model_generation.py  model_generation_demo.py  model_generation_http.py  model_generation_http_test.py  model_generation_sdk.py  model_generation_sdk_test.py  model_generation_test.py  model_registry.py  model_registry_test.py  parsers.py  parsers_test.py  prompt_generation.py  (+9 more)
game_arena/harness/fixtures/: freeciv_sample_game_states.json
game_arena/harness/formatters/: __init__.py  go.py  (+2 more)
llm-gateway/: websocket_handlers.py
scripts/: run-e2e-tests.sh  run_game.py  test_all_games.py  test_freeciv_connection.py
tests/diagnostic/: __init__.py  test_civserver_health.py
(+28 files in other folders)
